kubernetes/apps/infrastructure/alertmanager/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
  labels:
    app: alertmanager
spec:
  ports:
    - name: web
      port: 9093
      targetPort: web
      protocol: TCP
  selector:
    app: alertmanager
    alertmanager: alertmanager
