kubernetes/apps/infrastructure/alertmanager/base/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: alertmanager-gateway
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-prd
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      hostname: alertmanager.decort.tech
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: alertmanager.decort.tech
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: alertmanager-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-route-redirect
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: alertmanager-gateway
      namespace: monitoring
      sectionName: http
  hostnames:
    - "alertmanager.decort.tech"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-route
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: alertmanager-gateway
      namespace: monitoring
      sectionName: https
  hostnames:
    - "alertmanager.decort.tech"
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: alertmanager
          port: 9093
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
